--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "^10.0.0",
     "@angular/animations": "~8.2.3",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
@@ -20,6 +19,10 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "@ngrx/effects": "^8.4.0",
+    "@ngrx/entity": "^8.4.0",
+    "@ngrx/store": "^8.4.0",
+    "@ngrx/store-devtools": "^8.4.0",
     "immutable": "^4.0.0-rc.12",
     "redux": "4.0.1",
     "rxjs": "~6.4.0",
